--- a/sms-frontend-html/teacher.html
+++ b/sms-frontend-html/teacher.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>📗 Teacher Dashboard</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="data:,">
 </head>
 <body>
   <!-- Top Navbar -->
@@ -129,7 +130,7 @@
       const page = pageMap[title];
 
       if (page) {
-        content.innerHTML = `<iframe src="${page}" width="100%" height="600px" style="border:none;"></iframe>`;
+        content.innerHTML = `<iframe src="${page}" width="100%" height="600px" style="border:none;" sandbox="allow-scripts allow-forms allow-same-origin"></iframe>`;
       } else {
         content.innerHTML = `<h2>${title}</h2><p>Content for "${title}" will appear here.</p>`;
       }
