--- a/sms-frontend-html/view-marks-subject.html
+++ b/sms-frontend-html/view-marks-subject.html
@@ -4,85 +4,170 @@
   <meta charset="UTF-8">
   <title>View Marks by Subject</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 20px;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: left;
+    }
+    th {
+      background-color: #f0f0f0;
+    }
+    .analytics-box {
+      margin-top: 20px;
+      padding: 10px;
+      background-color: #eef;
+      border: 1px solid #99c;
+    }
+    .top-scorer-row {
+      background-color: #dfffdc;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-    <div class="content-wrapper">
-  <h2>📘 View Marks by Subject</h2>
+  <div class="content-wrapper">
+    <h2>📘 View Marks by Subject</h2>
 
-  <label>Class:</label>
-  <select id="classSelect">
-    <option value="">-- Select Class --</option>
-    <option value="TYCS">TYCS</option>
-    <option value="SYCS">SYCS</option>
-    <option value="FYCS">FYCS</option>
-  </select>
+    <label for="classSelect">Class:</label>
+    <select id="classSelect">
+      <option value="">-- Select Class --</option>
+    </select>
 
-  <label>Subject:</label>
-  <input type="text" id="subjectInput" placeholder="Enter subject" />
+    <label for="testSelect">Test:</label>
+    <select id="testSelect">
+      <option value="">-- Select Test --</option>
+    </select>
 
-  <label>Date:</label>
-  <input type="date" id="dateInput" />
+    <button onclick="loadSubjectMarks()">🔍 View Marks</button>
 
-  <button onclick="loadSubjectMarks()">🔍 View Marks</button>
+    <div id="marksDisplay" style="margin-top: 20px;"></div>
 
-  <div id="marksDisplay" style="margin-top: 20px;"></div>
+    <script>
+      async function loadClasses() {
+        try {
+          const res = await fetch("http://127.0.0.1:5000/api/classes");
+          const result = await res.json();
 
-  <script>
-    async function loadSubjectMarks() {
-      const className = document.getElementById("classSelect").value.trim();
-      const subject = document.getElementById("subjectInput").value.trim();
-      const date = document.getElementById("dateInput").value.trim();
+          const select = document.getElementById("classSelect");
+          select.innerHTML = '<option value="">-- Select Class --</option>';
 
-      if (!className || !subject || !date) {
-        alert("Please fill all fields.");
-        return;
+          result.classes.forEach(cls => {
+            const option = document.createElement("option");
+            option.value = cls;
+            option.textContent = cls;
+            select.appendChild(option);
+          });
+        } catch (err) {
+          console.error("Failed to load classes:", err);
+          alert("⚠️ Could not load class list.");
+        }
       }
 
-      const res = await fetch(`/api/subject-marks?class=${className}&subject=${subject}&date=${date}`);
-      const result = await res.json();
+      async function loadSubjectMarks() {
+        const className = document.getElementById("classSelect").value.trim();
+        const testValue = document.getElementById("testSelect").value;
+        if (!testValue) {
+          alert("Please select a test.");
+          return;
+        }
 
-      const container = document.getElementById("marksDisplay");
-      container.innerHTML = "";
+        const [subject, date, max_marks] = testValue.split("|");
 
-      if (!result.success || result.marks.length === 0) {
-        container.innerHTML = "<p>⚠️ No marks found for this test.</p>";
-        return;
+        if (!className || !subject || !date) {
+          alert("Please fill all fields.");
+          return;
+        }
+
+        try {
+          const res = await fetch(`http://127.0.0.1:5000/api/subject-marks?class=${encodeURIComponent(className)}&subject=${encodeURIComponent(subject)}&date=${encodeURIComponent(date)}`);
+          const result = await res.json();
+
+          const container = document.getElementById("marksDisplay");
+          container.innerHTML = "";
+
+          if (!result.success || !Array.isArray(result.marks) || result.marks.length === 0) {
+            container.innerHTML = "<p>⚠️ No marks found for this test.</p>";
+            return;
+          }
+
+          const topScorerId = result.analytics?.top_scorer?.student_id;
+
+          const table = document.createElement("table");
+          table.innerHTML = `
+            <tr>
+              <th>Student ID</th>
+              <th>Name</th>
+              <th>Marks</th>
+              <th>Max Marks</th>
+            </tr>
+          `;
+
+          result.marks.forEach(m => {
+            const row = document.createElement("tr");
+            if (m.student_id === topScorerId) {
+              row.classList.add("top-scorer-row");
+            }
+            row.innerHTML = `
+              <td>${m.student_id}</td>
+              <td>${m.name}</td>
+              <td>${m.marks}</td>
+              <td>${m.max_marks}</td>
+            `;
+            table.appendChild(row);
+          });
+
+          const analytics = result.analytics || {};
+          const summary = document.createElement("div");
+          summary.className = "analytics-box";
+          summary.innerHTML = `
+            <h3>📊 Class Analytics</h3>
+            <p>Average Marks: ${analytics.average ?? "N/A"}</p>
+            <p>Highest Marks: ${analytics.highest ?? "N/A"}${analytics.top_scorer?.name ? ` (${analytics.top_scorer.name})` : ""}</p>
+            <p>Lowest Marks: ${analytics.lowest ?? "N/A"}</p>
+          `;
+
+          container.appendChild(table);
+          container.appendChild(summary);
+        } catch (err) {
+          console.error("Error loading marks:", err);
+          alert("❌ Failed to fetch marks.");
+        }
       }
 
-      const table = document.createElement("table");
-      table.innerHTML = `
-        <tr>
-          <th>Student ID</th>
-          <th>Name</th>
-          <th>Marks</th>
-          <th>Max Marks</th>
-        </tr>
-      `;
+      window.onload = () => {
+        loadClasses();
 
-      result.marks.forEach(m => {
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td>${m.student_id}</td>
-          <td>${m.name}</td>
-          <td>${m.marks}</td>
-          <td>${m.max_marks}</td>
-        `;
-        table.appendChild(row);
-      });
+        document.getElementById("classSelect").addEventListener("change", async (e) => {
+          const className = e.target.value;
+          if (!className) return;
 
-      const analytics = result.analytics;
-      const summary = document.createElement("div");
-      summary.innerHTML = `
-        <h3>📊 Class Analytics</h3>
-        <p>Average Marks: ${analytics.average}</p>
-        <p>Highest Marks: ${analytics.highest}</p>
-        <p>Lowest Marks: ${analytics.lowest}</p>
-      `;
+          const res = await fetch(`http://127.0.0.1:5000/api/scheduled-tests?class=${encodeURIComponent(className)}`);
+          const result = await res.json();
 
-      container.appendChild(table);
-      container.appendChild(summary);
-    }
-  </script>
+          const testSelect = document.getElementById("testSelect");
+          testSelect.innerHTML = "";
+
+          if (!result.success || result.tests.length === 0) {
+            testSelect.innerHTML = "<option>No tests found</option>";
+            return;
+          }
+
+          testSelect.innerHTML = '<option value="">-- Select Test --</option>';
+          result.tests.forEach(t => {
+            const option = document.createElement("option");
+            option.value = `${t.subject}|${t.date}|${t.max_marks}`;
+            option.textContent = `${t.subject} on ${t.date} (Max: ${t.max_marks})`;
+            testSelect.appendChild(option);
+          });
+        });
+      };
+    </script>
   </div>
 </body>
 </html>
